# presage

./: .gitignore  Final integration: wire observability into server  LICENSE  README.md  demo.tape  ppm_blueprint.md  ppm_phase1.py  ppm_phase3.py  ppm_phase6.py  ppm_phase7.py  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
.hypothesis/constants/: 03225e115b936729  0c19573faabf9f08  0ec0db324acf2df8  176cbc96adb93aa4  286959d4323fddd6  28d91f26040767af  2e10b628420b6f33  30fa263b7d0aa9bf  30ff2ff781f42d6b  31ecef3db3fd732a  4113b43fb9200c54  4bdf77657b1da227  4dd4ff0f2b67b4dd  4f889730141e3f3f  5053fdd20365f4f3  5c1867bea60017cb  71945bd3d1768b68  78d98ecd7f1d685a  80f3a10a93651065  86f21571a4f8bd88  8b2338920483a10e  8bb26706a25e0e5a  8d5dc4b0e7955d41  974aca90a9b7c0ce  9dcc3b357f239b42  a42b4259dd94e348  af4ac6616239f6d0  b32c72b9b08d602f  bb24dfd956b25aa3  bcc769eeac59e971  bf466accd03101b6  c3bba449db614550  c5ce14f535dab642  cac0db38130dd667  d170ae3878e34d48  da39a3ee5e6b4b0d  de1fc7280932dd82  de61759c382f5104  dfda3b2e4a95ffd5  e934edeb6ea1a42e  (+3 more)
adapters/embedder/: base.py  local.py  openai.py
api/: deps.py  models.py  server.py  ws.py
cli/: ppm.py
config/: settings.py
core/: types.py
core/feedback/: dataset.py  detector.py  loop.py  models.py  tracker.py
core/nerve/: models.py  predictor.py  state.py
core/session/: factory.py  manager.py
core/staging/: cache.py  injector.py  models.py  prefetcher.py  reranker.py
core/store/: meta.py  outbox_worker.py  vector.py
core/surface/: intent.py  observer.py
core/write/: __init__.py  annotator.py  chunker.py  conflict.py  distiller.py  pipeline.py
docker/: .env.example  Dockerfile  docker-compose.yml
drafts/: ppm_phase2.py  ppm_phase4.py  ppm_phase5.py  ppm_refinements.md
math/: bandit.py  diffusion.py  entropy.py  knapsack.py  momentum.py
math_core/: bandit.py  diffusion.py  entropy.py  knapsack.py  momentum.py
observability/: metrics.py  middleware.py  tracing.py
tests/bench/: bench_momentum.py  bench_staging.py  bench_store.py
tests/integration/: test_api.py  test_feedback_loop.py  test_nerve_pipeline.py  test_session.py  test_staging_pipeline.py
tests/unit/: test_annotator.py  test_bandit.py  test_cache.py  test_chunker.py  test_conflict.py  test_dataset.py  test_detector.py  test_injector.py  test_knapsack.py  test_momentum.py  test_observer.py  test_predictor.py  test_reranker.py  test_state.py  test_tracker.py
